--- a/src/shared/ui/Button/Button.scss
+++ b/src/shared/ui/Button/Button.scss
@@ -1,6 +1,8 @@
 @import 'shared/styles/var-and-mixin.scss';
 
 .button {
+  display: block;
+  text-decoration: none;
   outline: none;
   border: none;
   border-radius: 46px;
@@ -29,6 +31,7 @@
 
   &__text {
     display: inline-block;
+    width: fit-content;
     border-radius: 46px;
   }
 
@@ -55,7 +58,7 @@
     }
 
     .button__text {
-      width: 100%;
+      //width: 100%;
       font-family: $SpectralSC;
       color: #FFF;
 
@@ -83,7 +86,7 @@
     }
 
     .button__text {
-      width: 100%;
+      //width: 100%;
       font-family: $SpectralSC;
       color: $text_color_transparent;
       background: #FFF;
