--- a/src/shared/ui/BannerCarousel/BannerSlide/BannerSlide.scss
+++ b/src/shared/ui/BannerCarousel/BannerSlide/BannerSlide.scss
@@ -7,19 +7,19 @@
   padding: 30px 0;
 
   &__photo {
-    padding: 20px;
     width: 50%;
     height: 350px;
+    padding: 20px;
   }
 
   &__img {
     display: inherit;
-    margin: 0 auto;
-    border-radius: 20px;
     width: 50%;
     height: 100%;
-    box-shadow: 2px 1px 20px -1px rgba(0, 0, 0, 0.5);
+    margin: 0 auto;
     object-fit: cover;
+    border-radius: 20px;
+    box-shadow: 2px 1px 20px -1px rgb(0 0 0 / 50%);
   }
 
   &__info {
@@ -40,7 +40,7 @@
 
   &__button-link {
     display: inline-block;
-    margin-top: 40px;
     width: 200px;
+    margin-top: 40px;
   }
 }
