--- a/src/shared/ui/Carousel/Slide/Slide.scss
+++ b/src/shared/ui/Carousel/Slide/Slide.scss
@@ -1,36 +1,36 @@
 .carousel-slide {
   position: relative;
   width: 100%;
-  height: 487px;
   max-width: 300px;
+  height: 487px;
   max-height: 487px;
 
   &__img {
-    border-radius: 20px;
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 20px;
   }
 
   &__background {
     position: absolute;
-    left: 0;
-    right: 0;
     top: 0;
+    right: 0;
     bottom: 0;
+    left: 0;
     display: inline-flex;
     flex-direction: column;
     justify-content: flex-end;
-    border-radius: 20px;
     width: 100%;
     height: 100%;
-    background: linear-gradient(180deg, rgba(80, 80, 80, 0.08) 50.1%, rgba(46, 46, 46, 0.59) 100%);
+    background: linear-gradient(180deg, rgb(80 80 80 / 8%) 50.1%, rgb(46 46 46 / 59%) 100%);
+    border-radius: 20px;
   }
 
   &__link {
     display: inline-block;
     padding: 24px 34px;
+    color: #fff;
     text-decoration: none;
-    color: #FFF;
   }
 }
