--- a/src/widgets/Header/ui/Header.scss
+++ b/src/widgets/Header/ui/Header.scss
@@ -16,16 +16,16 @@
 
   &__popup {
     position: fixed;
-    left: 0;
-    right: 0;
     top: 0;
+    right: 0;
     bottom: 0;
+    left: 0;
     z-index: 1001;
     display: none;
     justify-content: center;
     width: 100%;
     height: 100%;
-    background: rgba($color: #000, $alpha: 0.7);
+    background: rgba($color: #000, $alpha: 70%);
 
     &_visible {
       display: flex;
