Craeted AuthPanel and added logic with open and close modals

--- a/src/features/auth/ui/RegisterForm/RegisterForm.scss
+++ b/src/features/auth/ui/RegisterForm/RegisterForm.scss
@@ -1,4 +1,4 @@
-@import '../../../../app/assets/styles/vars-mixin.scss';
+@import 'shared/styles/var-and-mixin.scss';
 
 .register-form {
   position: relative;
