--- a/src/features/auth/ui/LoginForm/LoginForm.scss
+++ b/src/features/auth/ui/LoginForm/LoginForm.scss
@@ -1,4 +1,4 @@
-@import '../../../../app/assets/styles/vars-mixin.scss';
+@import 'shared/styles/var-and-mixin.scss';
 
 .login-form {
   position: relative;
