--- a/src/shared/ui/Popup/Popup.scss
+++ b/src/shared/ui/Popup/Popup.scss
@@ -1,14 +1,25 @@
 .popup {
   position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
   left: 0;
-  z-index: 100;
-  display: flex;
-  align-items: center;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 1001;
+  display: none;
   justify-content: center;
   width: 100%;
   height: 100%;
-  background-color: rgba(#000, 0.7);
+  background: rgba($color: #000, $alpha: 0.7);
+
+  &_visible {
+    display: flex;
+    overflow: scroll;
+  }
+
+  &__modal {
+    position: relative;
+    top: 20%;
+    width: 100%;
+    max-width: 600px;
+  }
 }
