run stylelint fix

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,6 +1,6 @@
-@import 'app/styles/fonts.scss';
-@import 'app/styles/reset.scss';
-@import 'shared/styles/var-and-mixin.scss';
+@import 'app/styles/fonts';
+@import 'app/styles/reset';
+@import 'shared/styles/var-and-mixin';
 
 html {
   color: $text_color;
