--- a/src/features/auth/ui/RegisterForm/RegisterForm.scss
+++ b/src/features/auth/ui/RegisterForm/RegisterForm.scss
@@ -1,31 +1,31 @@
-@import 'shared/styles/var-and-mixin.scss';
+@import 'shared/styles/var-and-mixin';
 
 .register-form {
   position: relative;
-  border-radius: 20px;
-  padding: 90px 20px;
   width: 100%;
   max-width: 600px;
-  box-shadow: 0 0 30px rgba(68, 68, 68, 0.2);
-  background: #FFF;
+  padding: 90px 20px;
+  background: #fff;
+  border-radius: 20px;
+  box-shadow: 0 0 30px rgb(68 68 68 / 20%);
 
   &__close {
     position: absolute;
-    right: 30px;
     top: 30px;
-    border: none;
+    right: 30px;
     background: inherit;
+    border: none;
     cursor: pointer;
   }
 
   &__title {
-    margin: 0 auto;
     max-width: 385px;
+    margin: 0 auto;
   }
 
   &__container {
-    margin: 0 auto;
     max-width: 385px;
+    margin: 0 auto;
   }
 
   &__input {
@@ -39,8 +39,8 @@
   }
 
   &__register-button {
-    border-bottom: 1px solid $text_color-transparent;
     padding: 40px 0;
+    border-bottom: 1px solid $text_color-transparent;
   }
 
   &__login-block {
@@ -51,7 +51,7 @@
   }
 
   &__login-button {
-    margin-left: 24px;
     width: 152px;
+    margin-left: 24px;
   }
 }
