--- a/src/pages/personal-profile/ui/PersonalProfile.scss
+++ b/src/pages/personal-profile/ui/PersonalProfile.scss
@@ -6,9 +6,9 @@
     justify-content: space-between;
     margin-top: 50px;
     padding: 50px 60px;
-    background: #FFFFFF;
-    box-shadow: 0px 0px 30px rgba(68, 68, 68, 0.05);
+    background: #fff;
     border-radius: 20px;
+    box-shadow: 0 0 30px rgb(68 68 68 / 5%);
   }
 
   &__sidebar {
