--- a/src/shared/ui/Button/Button.scss
+++ b/src/shared/ui/Button/Button.scss
@@ -1,4 +1,4 @@
-@import 'shared/styles/var-and-mixin.scss';
+@import 'shared/styles/var-and-mixin';
 
 .button {
   display: block;
@@ -32,8 +32,8 @@
   &__text {
     display: inline-block;
     width: fit-content;
-    border-radius: 46px;
     line-height: normal;
+    border-radius: 46px;
   }
 
   &_height-standard {
@@ -83,7 +83,6 @@
     background: $text_color_transparent;
 
     .button__inner {
-      
       background: #fff;
     }
 
