--- a/src/shared/ui/LinkCard/LinkCard.scss
+++ b/src/shared/ui/LinkCard/LinkCard.scss
@@ -7,7 +7,7 @@
   border-radius: 20px;
   width: 100%;
   height: 280px;
-  max-width: 375px;
+  max-width: 300px;
   box-shadow: 0 0 30px 0 rgba(68, 68, 68, 0.5);
   text-decoration: none;
   background: #FFF;
@@ -53,7 +53,7 @@
   &:hover {
     background: $green_gradient;
 
-    .catalog-card__link {
+    .link-card__link {
       color: $text_color_lite;
     }
   }
