Fixed problem of render product card

--- a/src/widgets/ProductCard/ui/ProductCardMini/ProductCardMini.scss
+++ b/src/widgets/ProductCard/ui/ProductCardMini/ProductCardMini.scss
@@ -1,4 +1,4 @@
-@import '../../../../app/assets/styles/vars-mixin.scss';
+@import 'shared/styles/var-and-mixin.scss';
 
 .product-card-mini {
   border-radius: 20px;
