--- a/src/pages/personal-profile/ui/PersonalProfile.scss
+++ b/src/pages/personal-profile/ui/PersonalProfile.scss
@@ -12,7 +12,7 @@
   }
 
   &__sidebar {
-    width: 300px;
+    min-width: 300px;
     padding-right: 30px;
     border-right: 1px solid $text_color_transparent;
   }
