--- a/src/shared/ui/Avatar/Avatar.scss
+++ b/src/shared/ui/Avatar/Avatar.scss
@@ -1,10 +1,12 @@
 .avatar {
   width: inherit;
   height: inherit;
+  border-radius: inherit;
 
   &__img {
     width: 100%;
     height: 100%;
+    border-radius: inherit;
     object-fit: cover;
   }
 }
