--- a/src/shared/ui/LinkCard/LinkCard.scss
+++ b/src/shared/ui/LinkCard/LinkCard.scss
@@ -8,9 +8,9 @@
   width: 100%;
   height: 280px;
   max-width: 300px;
-  box-shadow: 0 0 30px 0 rgba(68, 68, 68, 0.5);
+  box-shadow: 0 0 30px 0 rgb(68 68 68 / 50%);
   text-decoration: none;
-  background: #FFF;
+  background: #fff;
 
   &__info {
     padding: 35px 15%;
@@ -24,7 +24,7 @@
 
   &__price {
     margin-top: 5px;
-    color: rgba(94, 92, 90, 0.8);
+    color: rgb(94 92 90 / 80%);
   }
 
   &__link {
@@ -34,7 +34,7 @@
     font-weight: bold;
     text-align: right;
     text-decoration: none;
-    color: #FFF;
+    color: #fff;
   }
 
   &__photo {
