--- a/src/widgets/ProductCard/ui/ColorList/ColorList.scss
+++ b/src/widgets/ProductCard/ui/ColorList/ColorList.scss
@@ -27,7 +27,7 @@
     .color-list {
       &__item {
         margin-right: 15px;
-        border: 2px solid #BDBDBD;
+        border: 2px solid #bdbdbd;
         border-radius: 50%;
         width: 35px;
         height: 35px;
