--- a/src/widgets/ProductCard/ui/ProductCardMini/ProductCardMini.scss
+++ b/src/widgets/ProductCard/ui/ProductCardMini/ProductCardMini.scss
@@ -6,8 +6,8 @@
   width: 100%;
   min-width: 180px;
   max-width: 245px;
-  box-shadow: 0 0 30px rgba(68, 68, 68, 0.2);
-  background: #FFF;
+  box-shadow: 0 0 30px rgb(68 68 68 / 20%);
+  background: #fff;
 
   &__panel {
     display: flex;
