--- a/src/pages/products/ui/Products.scss
+++ b/src/pages/products/ui/Products.scss
@@ -1,9 +1,18 @@
+@import 'shared/styles/var-and-mixin.scss';
+
 .products {
   display: flex;
   justify-content: space-between;
 
   &__sidebar {
     min-width: 227px;
+  }
+
+  &__spinner {
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 50%;
   }
 
   &__items {
@@ -18,5 +27,11 @@
     width: 225px;
     margin-right: 15px;
     margin-bottom: 15px;
+  }
+
+  &__message-failed {
+    margin: 20px auto;
+
+    @extend %title_medium;
   }
 }
